parse memory blob of csv to array

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "nyc": "^15.1.0"
   },
   "dependencies": {
-    "csv-parse": "^4.12.0"
+    "csv-parse": "^4.12.0",
+    "fast-csv": "^4.3.2",
+    "geodist": "^0.2.1",
+    "lowdash": "^1.2.0"
   }
 }
