--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "csv-parse": "^4.12.0",
     "fast-csv": "^4.3.2",
     "geodist": "^0.2.1",
-    "lowdash": "^1.2.0"
+    "lowdash": "^1.2.0",
+    "yargs": "^16.0.3"
   }
 }
